Fix visualization modal dropdown alignment

--- a/src/styles/components/visualizations.styl
+++ b/src/styles/components/visualizations.styl
@@ -1,13 +1,13 @@
 .c-visualizations
   container()
+  &__dropdownContainer
+    display flex
   &__columnDropdown
     border-bottom-right-radius 0
     border-top-right-radius 0
   &__chartDropdown
     border-bottom-left-radius 0
     border-top-left-radius 0
-    position relative
-    top -1px
   &__tooltip
     background-color white
     border solid $col-trout 1px
